force-app/main/default/objects/User/fields/Jira_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_Number__c</fullName>
    <description>used to store jira ticket number while creating User</description>
    <label>Jira Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>