force-app/main/default/objects/User/validationRules/End_Date_Future_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Future_Only</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( End_Date__c )),
End_Date__c &lt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be in the past.</errorMessage>
</ValidationRule>