force-app/main/default/objects/User/validationRules/End_Date_Not_Before_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_Before_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(End_Date__c)),
NOT(ISBLANK( Start_Date__c )),
End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>