force-app/main/default/objects/User/validationRules/Require_Dates_For_Named_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Dates_For_Named_Access</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Access_Type__c ,&quot;Named Access&quot;),
OR(
ISBLANK( Start_Date__c ),
ISBLANK( End_Date__c ),
ISBLANK( ManagerId)
)
)</errorConditionFormula>
    <errorMessage>Start Date, End Date, and Manager are mandatory for Named Access.</errorMessage>
</ValidationRule>